--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "myuniverselol",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jonathancsr.github.io/myuniverselol/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "disable-scroll": "^0.4.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
-    "react-image-gallery": "^0.8.16",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "surge": "^0.20.4"
@@ -18,8 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d ./build"
+    "deploy": "npm run build && gh-pages -d ./build"
   },
   "eslintConfig": {
     "extends": "react-app"
