--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://myuniverselol.netlify.com//",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^12.1.0",
+    "@ckeditor/ckeditor5-react": "^1.1.3",
     "bootstrap": "^4.3.1",
     "disable-scroll": "^0.4.1",
     "react": "^16.8.6",
