--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myuniverselol",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://myuniverselol.netlify.com//",
+  "homepage": "https://jonathancsr.github.io/myuniverselol/",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^12.1.0",
     "@ckeditor/ckeditor5-react": "^1.1.3",
