--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "myuniverselol",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "homepage": "https://jonathancsr.github.io/myuniverselol/",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^12.1.0",
     "@ckeditor/ckeditor5-react": "^1.1.3",
+    "axios": "^0.19.0",
+    "base64-to-image": "^1.0.2",
     "bootstrap": "^4.3.1",
+    "connected-react-rout'er": "^6.4.0",
     "disable-scroll": "^0.4.1",
+    "image-to-base64": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "2.2.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-facebook-login": "^4.1.1",
+    "react-images-upload": "^1.2.7",
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
-    "surge": "^0.20.4"
+    "react-ui-cards": "^1.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +48,7 @@
   },
   "devDependencies": {
     "gh-pages": "^2.0.1"
-  }
+  },
+  "proxy": "https://myuniverselol.herokuapp.com/",
+  "proxy": "https://br1.api.riotgames.com/lol/summoner/v4/summoners/by-name/"
 }
